refactor : pongo en plural, para seguir el estandar JSON API
